sql/sql_base.cc
@@ -769,19 +769,23 @@ void close_temporary_tables(THD *thd)
     {
       /* Set pseudo_thread_id to be that of the processed table */
       thd->variables.pseudo_thread_id= tmpkeyval(thd, table);
-      /* Loop forward through all tables within the sublist of
-         common pseudo_thread_id to create single DROP query */
+      String db;
+      db.append(table->s->db);
+      /* Loop forward through all tables that belong to a common database
+         within the sublist of common pseudo_thread_id to create single
+         DROP query 
+      */
       for (s_query.length(stub_len);
            table && is_user_table(table) &&
-             tmpkeyval(thd, table) == thd->variables.pseudo_thread_id;
+             tmpkeyval(thd, table) == thd->variables.pseudo_thread_id &&
+             strlen(table->s->db) == db.length() &&
+             strcmp(table->s->db, db.ptr()) == 0;
            table= next)
       {
         /*
-          We are going to add 4 ` around the db/table names and possible more
-          due to special characters in the names
+          We are going to add ` around the table names and possible more
+          due to special characters
         */
-        append_identifier(thd, &s_query, table->s->db, strlen(table->s->db));
-        s_query.q_append('.');
         append_identifier(thd, &s_query, table->s->table_name,
                           strlen(table->s->table_name));
         s_query.q_append(',');
@@ -794,6 +798,7 @@ void close_temporary_tables(THD *thd)
       Query_log_event qinfo(thd, s_query.ptr(),
                             s_query.length() - 1 /* to remove trailing ',' */,
                             0, FALSE);
+      qinfo.db= db.ptr();
       thd->variables.character_set_client= cs_save;
       /*
         Imagine the thread had created a temp table, then was doing a SELECT, and
